--- a/templates/question/homepage.html.twig
+++ b/templates/question/homepage.html.twig
@@ -26,7 +26,7 @@
                             </div>
                         </div>
                         <div class="col">
-                            <a class="q-title" href="{{ path('questionShow', {anyWord: 'jakis Text'}) }}"><h2>Question One</h2></a>
+                            <a class="q-title" href="{{ path('questionShow', {slug: 'SLUG'}) }}"><h2>Question One</h2></a>
                             <div class="q-display p-3">
                                 <i class="fa fa-quote-left mr-3"></i>
                                 <p class="d-inline">I've been turned into a cat, any thoughts on how to turn back? While I'm adorable, I don't really care for cat food.</p>
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                 </div>
-                <a class="answer-link" href="{{ path('questionShow', {anyWord: 'jakis Text'}) }}" style="color: #fff;">
+                <a class="answer-link" href="{{ path('questionShow', {slug: 'SLUG'}) }}" style="color: #fff;">
                     <p class="q-display-response text-center p-3">
                         <i class="fa fa-magic magic-wand"></i>{{ random(13) }} answers  
                     </p>
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <a class="q-title" href="{{ path('questionShow', {anyWord: 'jakis Text 2'}) }}"><h2>Question Two</h2></a>
+                        <a class="q-title" href="{{ path('questionShow', {slug: 'SLUG2'}) }}"><h2>Question Two</h2></a>
                         <div class="q-display p-3">
                             <i class="fa fa-quote-left mr-3"></i>
                             <p class="d-inline">I mastered the floating card, but now how do I get it back to the ground?</p>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
             </div>
-            <a class="answer-link" href="{{ path('questionShow', {anyWord: 'jakis Text 2'}) }}" style="color: #fff;">
+            <a class="answer-link" href="{{ path('questionShow', {slug: 'SLUG2'}) }}" style="color: #fff;">
                 <p class="q-display-response text-center p-3">
                     <i class="fa fa-magic magic-wand"></i> {{ random(13) }}  answers 
                 </p>
