--- a/templates/question/homepage.html.twig
+++ b/templates/question/homepage.html.twig
@@ -13,62 +13,37 @@
             <button class="btn btn-question">Ask a Question</button>
         </div>
     </div>
+
     <div class="row">
+    {% for question in questions %}
         <div class="col-12">
             <div style="box-shadow: 2px 3px 9px 4px rgba(0,0,0,0.04);">
                 <div class="q-container p-4">
                     <div class="row">
                         <div class="col-2 text-center">
-                            <img src="{{ asset('img/tisha.png') }}" width="100" height="100">
-                            <div class="d-block mt-3 vote-arrows">
-                                <a class="vote-up" href="#"><i class="far fa-arrow-alt-circle-up"></i></a>
-                                <a class="vote-down" href="#"><i class="far fa-arrow-alt-circle-down"></i></a>
+                            <img src="{{ asset('img/tisha.png') }}" width="100" height="100" alt="Tisha avatar">
+                            <div class="vote-arrows vote-arrows-alt flex-fill pt-2" style="min-width: 90px;">
+                                <span>{{random(13)}} votes</span>
                             </div>
                         </div>
                         <div class="col">
-                            <a class="q-title" href="{{ path('questionShow', {slug: 'SLUG'}) }}"><h2>Question One</h2></a>
+                            <a class="q-title" href="{{ path('questionShow', {slug: question.slug}) }}"><h2>question.name</h2></a>
                             <div class="q-display p-3">
                                 <i class="fa fa-quote-left mr-3"></i>
-                                <p class="d-inline">I've been turned into a cat, any thoughts on how to turn back? While I'm adorable, I don't really care for cat food.</p>
+                                <p class="d-inline">{{ question.question|parse_markdown}}</p>
                                 <p class="pt-4"><strong>--Tisha</strong></p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <a class="answer-link" href="{{ path('questionShow', {slug: 'SLUG'}) }}" style="color: #fff;">
+                <a class="answer-link" href="{{ path('questionShow', {slug: question.slug}) }}" style="color: #f6f6f6;">
                     <p class="q-display-response text-center p-3">
                         <i class="fa fa-magic magic-wand"></i>{{ random(13) }} answers  
                     </p>
                 </a>
             </div>
         </div>
-
-        <div class="col-12 mt-3">
-            <div class="q-container p-4">
-                <div class="row">
-                    <div class="col-2 text-center">
-                        <img src="{{ asset('img/magic-photo.png') }}" width="100" height="100">
-                        <div class="d-block mt-3 vote-arrows">
-                            <a class="vote-up" href="#"><i class="far fa-arrow-alt-circle-up"></i></a>
-                            <a class="vote-down" href="#"><i class="far fa-arrow-alt-circle-down"></i></a>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <a class="q-title" href="{{ path('questionShow', {slug: 'SLUG2'}) }}"><h2>Question Two</h2></a>
-                        <div class="q-display p-3">
-                            <i class="fa fa-quote-left mr-3"></i>
-                            <p class="d-inline">I mastered the floating card, but now how do I get it back to the ground?</p>
-                            <p class="pt-4"><strong>--Jerry</strong></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="answer-link" href="{{ path('questionShow', {slug: 'SLUG2'}) }}" style="color: #fff;">
-                <p class="q-display-response text-center p-3">
-                    <i class="fa fa-magic magic-wand"></i> {{ random(13) }}  answers 
-                </p>
-            </a>
-        </div>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
