--- a/templates/question/homepage.html.twig
+++ b/templates/question/homepage.html.twig
@@ -27,7 +27,7 @@
                             </div>
                         </div>
                         <div class="col">
-                            <a class="q-title" href="{{ path('questionShow', {slug: question.slug}) }}"><h2>question.name</h2></a>
+                            <a class="q-title" href="{{ path('questionShow', {slug: question.slug}) }}"><h2>{{question.name}}</h2></a>
                             <div class="q-display p-3">
                                 <i class="fa fa-quote-left mr-3"></i>
                                 <p class="d-inline">{{ question.question|parse_markdown}}</p>
