--- a/templates/question/homepage.html.twig
+++ b/templates/question/homepage.html.twig
@@ -23,7 +23,7 @@
                         <div class="col-2 text-center">
                             <img src="{{ asset('img/tisha.png') }}" width="100" height="100" alt="Tisha avatar">
                             <div class="vote-arrows vote-arrows-alt flex-fill pt-2" style="min-width: 90px;">
-                                <span>{{random(13)}} votes</span>
+                                <span>{{question.votes}} votes</span>
                             </div>
                         </div>
                         <div class="col">
@@ -31,7 +31,7 @@
                             <div class="q-display p-3">
                                 <i class="fa fa-quote-left mr-3"></i>
                                 <p class="d-inline">{{ question.question|parse_markdown}}</p>
-                                <p class="pt-4"><strong>--Tisha</strong></p>
+                                <p class="pt-4"><strong>--{{question.name}}</strong></p>
                             </div>
                         </div>
                     </div>
