--- a/templates/question/old_show.html.twig
+++ b/templates/question/old_show.html.twig
@@ -57,17 +57,14 @@
                         <img src="{{ asset('img/tisha.png') }}" width="50" height="50">
                     </div>
                     <div class="mr-3 pt-2">
-                        id: {{answer.id}}. 
-                        <p>{{ answer.content|parse_markdown }}</p>
-                        <p>-- {{answer.username}} </p>
+                        {{ answer.content|parse_markdown }}
+                        <p>-- {{answer.username}}</p>
                     </div>
-                    <form action="{{ path('answer_vote', {id: answer.id})}}" method="POST">
-                     <div class="vote-arrows vote-arrows-alt flex-fill pt-2" style="min-width: 70px;">
-                        <button class="vote-up btn btn-link" name="direction" value="up"><i class="far fa-arrow-alt-circle-up"></i></button>
-                        <button class="vote-down btn btn-link" name="direction" value="down"><i class="far fa-arrow-alt-circle-down"></i></button>
-                        <span>{{answer.votes}}</span>
-                     </div>
-                    </form>
+                    <div class="vote-arrows flex-fill pt-2 js-vote-arrows" style="min-width: 90px;">
+                        <a class="vote-up" href="#" data-direction="up"><i class="far fa-arrow-alt-circle-up"></i></a>
+                        <a class="vote-down" href="#" data-direction="down"><i class="far fa-arrow-alt-circle-down"></i></a>
+                        <span><span class="js-vote-total">{{answer.votes}}</span> </span>
+                    </div>
                 </div>
             </li>
         {% endfor %}
