--- a/templates/question/homepage.html.twig
+++ b/templates/question/homepage.html.twig
@@ -38,7 +38,7 @@
                 </div>
                 <a class="answer-link" href="{{ path('questionShow', {slug: question.slug}) }}" style="color: #f6f6f6;">
                     <p class="q-display-response text-center p-3">
-                        <i class="fa fa-magic magic-wand"></i>{{ random(13) }} answers  
+                        <i class="fa fa-magic magic-wand"></i>{{ question.answers|length }} answers  
                     </p>
                 </a>
             </div>
