--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -52,22 +52,24 @@
     <ul class="list-unstyled">
         {% for answer in question.answers %}
             <li class="mb-4">
-                <div class="d-flex justify-content-center">
-                    <div class="mr-2 pt-2">
+                <div class="row">
+                    <div class="col-1">
                         <img src="{{ asset('img/tisha.png') }}" width="50" height="50">
                     </div>
-                    <div class="mr-3 pt-2">
-                        id: {{answer.id}}. 
+                    <div class="col-9">
                         <p>{{ answer.content|parse_markdown }}</p>
                         <p>-- {{answer.username}} </p>
                     </div>
-                    <form action="{{ path('answer_vote', {id: answer.id})}}" method="POST">
-                     <div class="vote-arrows vote-arrows-alt flex-fill pt-2" style="min-width: 70px;">
-                        <button class="vote-up btn btn-link" name="direction" value="up"><i class="far fa-arrow-alt-circle-up"></i></button>
-                        <button class="vote-down btn btn-link" name="direction" value="down"><i class="far fa-arrow-alt-circle-down"></i></button>
-                        <span>{{answer.votes}}</span>
+                    <div class="col-2 text-end">
+                     <small>{{ answer.createdAt|ago }}</small>
+                     <div>
+                      <form action="{{ path('answer_vote', {id: answer.id})}}" method="POST">
+                         <button class="vote-up btn btn-link" name="direction" value="up"><i class="far fa-arrow-alt-circle-up"></i></button>
+                         <button class="vote-down btn btn-link" name="direction" value="down"><i class="far fa-arrow-alt-circle-down"></i></button>
+                         <span>{{answer.votes}}</span>
+                      </form>
                      </div>
-                    </form>
+                    </div>
                 </div>
             </li>
         {% endfor %}
