--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -45,12 +45,12 @@
     </div>
 
     <div class="d-flex justify-content-between my-4">
-        <h2 class="">Answers <span style="font-size:1.2rem;">({{ question.answers|length }})</span></h2>
+        <h2 class="">Answers <span style="font-size:1.2rem;">({{ question.approvedAnswers|length }})</span></h2>
         <button class="btn btn-sm btn-secondary">Submit an Answer</button>
     </div>
 
     <ul class="list-unstyled">
-        {% for answer in question.answers %}
+        {% for answer in question.approvedAnswers %}
             <li class="mb-4">
                 <div class="row">
                     <div class="col-1">
@@ -67,6 +67,7 @@
                          <button class="vote-up btn btn-link" name="direction" value="up"><i class="far fa-arrow-alt-circle-up"></i></button>
                          <button class="vote-down btn btn-link" name="direction" value="down"><i class="far fa-arrow-alt-circle-down"></i></button>
                          <span>{{answer.votes}}</span>
+                         <span>{{answer.status}}</span>
                       </form>
                      </div>
                     </div>
