--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,13 @@
             <i style="color: #444; font-size: 2rem;" class="pb-1 fad fa-cauldron"></i>
             <p class="pl-2 d-inline font-weight-bold" style="color: #444;">Cauldron Overflow</p>
           </a>
+          
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('popular_answers') }}">Answers</a>
+                    </li>
+                </ul>
+            
           <button class="btn btn-dark">Sign up</button>
         </nav>
 
