--- a/templates/answer/popularAnswer.html.twig
+++ b/templates/answer/popularAnswer.html.twig
@@ -2,14 +2,18 @@
 {% block title %}Popular Answers{% endblock %}
 {% block body %}
 <div class="container my-md-4">
-    <div class="row">
+    <div class="d-flex justify-content-between">
         <h1>Most Popular Answers</h1>
+        <form action="{{path('popular_answers')}}">
+        <input type="search" name="q" value="{{ app.request.query.get('q')}}" 
+            class="form-control" placeholder="search..." aria-label="Search">
+        </form>
+    </div>
         <ul class="list-unstyled">
             {% for answer in answers %}
                 {{include('answer/_answer.html.twig',
                 {showQuestion: true}) }}
             {% endfor %}
         </ul>
-    </div>
 </div>
 {% endblock %}
