--- a/templates/question/homepage.html.twig
+++ b/templates/question/homepage.html.twig
@@ -23,8 +23,11 @@
                         <div class="col-2 text-center">
                             <img src="{{ asset('img/tisha.png') }}" width="100" height="100" alt="Tisha avatar">
                             <div class="vote-arrows vote-arrows-alt flex-fill pt-2" style="min-width: 90px;">
-                                <span>{{question.votes}} votes</span>
+                                <span>{{question.votesString}} votes</span>
                             </div>
+                            {% for tag in question.tags %}
+                                <span class="badge rounded-pill bg-light text-dark">{{ tag.name }}</span>
+                            {% endfor %}
                         </div>
                         <div class="col">
                             <a class="q-title" href="{{ path('questionShow', {slug: question.slug}) }}"><h2>{{question.name}}</h2></a>
