--- a/templates/question/homepage.html.twig
+++ b/templates/question/homepage.html.twig
@@ -15,7 +15,7 @@
     </div>
 
     <div class="row">
-    {% for question in questions %}
+    {% for question in pager %}
         <div class="col-12">
             <div style="box-shadow: 2px 3px 9px 4px rgba(0,0,0,0.04);">
                 <div class="q-container p-4">
