--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,19 +10,23 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-light bg-light" style="height: 100px;">
+        <nav class="navbar navbar-light bg-light px-3" >
           <a class="navbar-brand" href="{{path('homePage')}}">
             <i style="color: #444; font-size: 2rem;" class="pb-1 fad fa-cauldron"></i>
             <p class="pl-2 d-inline font-weight-bold" style="color: #444;">Cauldron Overflow</p>
           </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-collapsable" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
           
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('popular_answers') }}">Answers</a>
                     </li>
                 </ul>
-            
-          <button class="btn btn-dark">Sign up</button>
+            <a class="nav-link text-black-50 mx-2" href="{{ path('app_login') }}">Log In</a>
+            <a href="#" class="btn btn-dark">Sign up</a>
         </nav>
 
         {% block body %}{% endblock %}
