--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,9 +24,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('popular_answers') }}">Answers</a>
                     </li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_admin') }}">Admin</a>
+                    </li>
+                    {% endif %}
                 </ul>
+                    {% if is_granted('ROLE_USER') %}
+                        <a class="nav-link" href="{{ path('app_logout') }}">LogOut</a>
+                    {% else %}
             <a class="nav-link text-black-50 mx-2" href="{{ path('app_login') }}">Log In</a>
             <a href="#" class="btn btn-dark">Sign up</a>
+            {% endif %}
         </nav>
 
         {% block body %}{% endblock %}
