--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,9 +30,12 @@
                     </li>
                     {% endif %}
                 </ul>
-                    {% if is_granted('ROLE_USER') %}
-                        <a class="nav-link" href="{{ path('app_logout') }}">LogOut</a>
-                    {% else %}
+
+                {% if is_granted('ROLE_USER') %}
+                    <h4>Hi {{ app.user.firstName }} &nbsp</h4>
+                    <a class="nav-link" href="{{ path('app_logout') }}"> LogOut </a>
+                {% else %}
+
             <a class="nav-link text-black-50 mx-2" href="{{ path('app_login') }}">Log In</a>
             <a href="#" class="btn btn-dark">Sign up</a>
             {% endif %}
