--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,8 +15,7 @@
                 url: path('app_user_api_me')
             }) }}
         {% endif %#}
-        <nav 
-            class="navbar navbar-light bg-light px-3" 
+        <nav class="navbar navbar-light bg-light px-3" >
             {{ is_granted('ROLE_PREVIOUS_ADMIN') ? 'style="background-color: brown !important"' }}
           <a class="navbar-brand" href="{{path('homePage')}}">
             <i style="color: #444; font-size: 2rem;" class="pb-1 fad fa-cauldron"></i>
@@ -54,7 +53,7 @@
                 {% else %}
 
             <a class="nav-link text-black-50 mx-2" href="{{ path('app_login') }}">Log In</a>
-            <a href="#" class="btn btn-dark">Sign up</a>
+            <a href="{{path('app_register')}}" class="btn btn-dark">Sign up</a>
             {% endif %}
         </nav>
 
