--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,6 +57,13 @@
             {% endif %}
         </nav>
 
+        {% for flash in app.flashes('success') %}
+            <div class="alert alert-success">{{ flash }}</div>
+        {% endfor %}
+        {% for flash in app.flashes('error') %}
+            <div class="alert alert-danger">{{ flash }}</div>
+        {% endfor %}
+
         {% block body %}{% endblock %}
         <footer class="mt-5 p-3 text-center">
             Made with <i style="color: red;" class="fa fa-heart"></i> by <a style="color: #444; text-decoration: underline;" href="https://pzon.eu" target="blank">Pzon</a>
