--- a/templates/question/homepage.html.twig
+++ b/templates/question/homepage.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="jumbotron-img jumbotron jumbotron-fluid">
-    <div class="container">
+    <div class="container pt-1">
         <h1 class="display-4">Your Questions Answered</h1>
         <p class="lead">And even answers for those questions you didn't think to ask!</p>
     </div>
